--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -48,12 +48,19 @@
     "id": "zH6MHKGUMTaq"
    },
    "source": [
+    "Of the 5 senses we have availible to us, taste is often though of as the least understood sense since it is so difficult to quantify. This can pose problems for industries where buisiness is influenced by the taste of a product because sensory tests will often require human experts. This is especially true for the wine industry, which is what we will focus on in this project.\n",
+    "\n",
+    "Wine tasteing is seen by some as a pastime, but it is also a job. Expert wine testers are needed throughout the wine industry to determine and certify the quality of different wines. While this is the current standard, is it possible to use data analysis to also ascess the taste of wine?**not done yet\n",
+    "\n",
     "The dataset contains details of red and white winho verde wine samples from the north of Portugal and quality is based on the physicochemical tests. \n",
     "\n",
     "Dataset citation: P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis.\n",
     "Modeling wine preferences by data mining from physicochemical properties. In Decision Support Systems, Elsevier, 47(4):547-553, 2009\n",
     "\n",
-    "The question that we will be trying to answer using our dataset is predicting what the quality of a wine would be given its wine features (physicochemical tests such as pH level, alcohol level, etc). And we will be doing classification. \n"
+    "The question that we will be trying to answer using our dataset is predicting what the quality of a wine would be given its wine features (physicochemical tests such as pH level, alcohol level, etc). And we will be doing classification. \n",
+    "\n",
+    ";; this is the paper I'm using for info. It's also uses (and maybe created?) the data set we're using.\n",
+    "sciencedirect.com/science/article/pii/S0167923609001377?via%3Dihub"
    ]
   },
   {
