--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -1,30 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ugRIfVsQkVVp",
-    "outputId": "096b2c61-c365-465e-bed1-d14198ab305e"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "nZ0idut3LLnj"
@@ -53,11 +29,10 @@
     "**Is it possible to predict the quality classification of a wine based on quantifiable physicochemical properties?**\n",
     "\n",
     "\n",
-    "Our dataset contains details of red and white winho verde wine samples from the north of Portugal and the quality is classified on an integer scale of 1-10\n",
+    "Our dataset contains details of red and white *winho verde* wine samples from the north of Portugal. There are 11 quantified physicochemical properties and the quality is classified on an integer scale of 1-10\n",
     "\n",
     "Dataset citation: \\\n",
-    "P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis.\n",
-    "Modeling wine preferences by data mining from physicochemical properties. In Decision Support Systems, Elsevier, 47(4):547-553, 2009\n",
+    "Cortez, P., Cerdeira, A., Almeida, F., Matos, T., & Reis, J. (2009). Modeling wine preferences by data mining from physicochemical properties. *Decision Support Systems*, 47(4), 547–553. doi:10.1016/j.dss.2009.05.016\n",
     "\n",
     ";; just keeping these links here for now \\\n",
     "sciencedirect.com/science/article/pii/S0167923609001377?via%3Dihub \\\n",
@@ -75,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "id": "8LoeMVb4MCdu"
    },
@@ -89,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -201,7 +176,7 @@
        "2      9.8        5  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +295,7 @@
        "2     10.1        6  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,35 +307,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "502     7\n",
-       "585     6\n",
-       "258     5\n",
-       "1486    5\n",
-       "831     6\n",
-       "Name: quality, dtype: int64"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m X_white_train \u001b[38;5;241m=\u001b[39m white_train\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m y_white_train \u001b[38;5;241m=\u001b[39m white_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 10\u001b[0m \u001b[43mX\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n\u001b[1;32m     11\u001b[0m y\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
     }
    ],
    "source": [
     "red_train, red_test = train_test_split(data_red, test_size=0.25, random_state=123)\n",
     "white_train, white_test = train_test_split(data_white, test_size=0.25, random_state=123)\n",
-    "red_train.head()\n",
+    "\n",
     "X_red_train = red_train.drop('quality', axis=1)\n",
     "y_red_train = red_train['quality']\n",
     "X_white_train = white_train.drop('quality', axis=1)\n",
-    "y_white_train = white_train['quality']\n",
-    "X.head()\n",
-    "y.head()"
+    "y_white_train = white_train['quality']\n"
    ]
   },
   {
