little edits to intro

--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -24,9 +24,9 @@
     "id": "zH6MHKGUMTaq"
    },
    "source": [
-    "Of the 5 senses we have available to us, taste is often thought of as the least understood sense because of how difficult it is to quantify. This can pose problems for industries where business is influenced by the taste of a product, which is especially true for the wine industry. Expert wine testers are often needed to determine and certify the quality of different wines through sensory tests. (Cortez, 2009) This leads to our question:\n",
+    "Of the 5 senses we have available to us, taste is often thought of as the least understood sense because of how difficult it is to quantify. This can pose problems for industries where business is influenced by the taste of a product, which is especially true for the wine industry. Expert wine testers are often needed to determine and certify the quality of different wines through sensory tests. (Cortez, 2009) While this is the current industry standard, are there any other ways to certify the quality of a wine without depending on certifed experts? This leads to our question:\n",
     "\n",
-    "**Is it possible to predict the quality classification of a wine based on quantifiable physicochemical properties?**\n",
+    "**Is it possible to predict the quality classification of a wine based on quantifiable physicochemical properties using data analysis?**\n",
     "\n",
     "\n",
     "Our dataset contains details of red and white *winho verde* wine samples from the north of Portugal. There are 11 quantified physicochemical properties and the quality is classified on an integer scale of 1-10\n",
