2nd table for means and type occurances

--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -61,12 +61,12 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: altair==5.0.0rc1 in /opt/conda/lib/python3.10/site-packages (5.0.0rc1)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
-      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
-      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
       "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
       "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
+      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
+      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (22.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2.8.2)\n",
@@ -79,6 +79,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from IPython.display import display, HTML\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import (\n",
     "    train_test_split,\n",
     ")\n",
@@ -142,12 +145,13 @@
        "      <th>pH</th>\n",
        "      <th>sulphates</th>\n",
        "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
        "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1773</th>\n",
+       "      <th>0</th>\n",
        "      <td>7.8</td>\n",
        "      <td>0.390</td>\n",
        "      <td>0.26</td>\n",
@@ -159,10 +163,11 @@
        "      <td>3.04</td>\n",
        "      <td>0.42</td>\n",
        "      <td>10.9</td>\n",
+       "      <td>6</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1094</th>\n",
+       "      <th>1</th>\n",
        "      <td>6.6</td>\n",
        "      <td>0.725</td>\n",
        "      <td>0.09</td>\n",
@@ -174,10 +179,11 @@
        "      <td>3.35</td>\n",
        "      <td>0.49</td>\n",
        "      <td>10.8</td>\n",
+       "      <td>6</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4813</th>\n",
+       "      <th>2</th>\n",
        "      <td>5.8</td>\n",
        "      <td>0.360</td>\n",
        "      <td>0.50</td>\n",
@@ -189,10 +195,11 @@
        "      <td>3.10</td>\n",
        "      <td>0.45</td>\n",
        "      <td>9.7</td>\n",
+       "      <td>5</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>853</th>\n",
+       "      <th>3</th>\n",
        "      <td>9.3</td>\n",
        "      <td>0.360</td>\n",
        "      <td>0.39</td>\n",
@@ -204,10 +211,11 @@
        "      <td>3.47</td>\n",
        "      <td>0.73</td>\n",
        "      <td>10.9</td>\n",
+       "      <td>6</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2185</th>\n",
+       "      <th>4</th>\n",
        "      <td>7.5</td>\n",
        "      <td>0.180</td>\n",
        "      <td>0.31</td>\n",
@@ -219,6 +227,7 @@
        "      <td>3.19</td>\n",
        "      <td>0.44</td>\n",
        "      <td>9.5</td>\n",
+       "      <td>7</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -235,9 +244,10 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3619</th>\n",
+       "      <th>4867</th>\n",
        "      <td>6.8</td>\n",
        "      <td>0.450</td>\n",
        "      <td>0.28</td>\n",
@@ -249,10 +259,11 @@
        "      <td>3.06</td>\n",
        "      <td>0.42</td>\n",
        "      <td>10.6</td>\n",
+       "      <td>6</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2461</th>\n",
+       "      <th>4868</th>\n",
        "      <td>8.2</td>\n",
        "      <td>0.260</td>\n",
        "      <td>0.33</td>\n",
@@ -264,10 +275,11 @@
        "      <td>2.89</td>\n",
        "      <td>0.49</td>\n",
        "      <td>9.5</td>\n",
+       "      <td>5</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1346</th>\n",
+       "      <th>4869</th>\n",
        "      <td>6.1</td>\n",
        "      <td>0.590</td>\n",
        "      <td>0.01</td>\n",
@@ -279,10 +291,11 @@
        "      <td>3.52</td>\n",
        "      <td>0.56</td>\n",
        "      <td>11.4</td>\n",
+       "      <td>5</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1855</th>\n",
+       "      <th>4870</th>\n",
        "      <td>8.0</td>\n",
        "      <td>0.220</td>\n",
        "      <td>0.28</td>\n",
@@ -294,10 +307,11 @@
        "      <td>3.14</td>\n",
        "      <td>0.45</td>\n",
        "      <td>9.8</td>\n",
+       "      <td>6</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1983</th>\n",
+       "      <th>4871</th>\n",
        "      <td>7.6</td>\n",
        "      <td>0.200</td>\n",
        "      <td>0.30</td>\n",
@@ -309,93 +323,177 @@
        "      <td>3.14</td>\n",
        "      <td>0.46</td>\n",
        "      <td>8.9</td>\n",
+       "      <td>8</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4872 rows × 12 columns</p>\n",
+       "<p>4872 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "1773            7.8             0.390         0.26            9.90      0.059   \n",
-       "1094            6.6             0.725         0.09            5.50      0.117   \n",
-       "4813            5.8             0.360         0.50            1.00      0.127   \n",
-       "853             9.3             0.360         0.39            1.50      0.080   \n",
-       "2185            7.5             0.180         0.31           11.70      0.051   \n",
+       "0               7.8             0.390         0.26            9.90      0.059   \n",
+       "1               6.6             0.725         0.09            5.50      0.117   \n",
+       "2               5.8             0.360         0.50            1.00      0.127   \n",
+       "3               9.3             0.360         0.39            1.50      0.080   \n",
+       "4               7.5             0.180         0.31           11.70      0.051   \n",
        "...             ...               ...          ...             ...        ...   \n",
-       "3619            6.8             0.450         0.28           26.05      0.031   \n",
-       "2461            8.2             0.260         0.33            2.60      0.053   \n",
-       "1346            6.1             0.590         0.01            2.10      0.056   \n",
-       "1855            8.0             0.220         0.28           14.00      0.053   \n",
-       "1983            7.6             0.200         0.30           14.20      0.056   \n",
+       "4867            6.8             0.450         0.28           26.05      0.031   \n",
+       "4868            8.2             0.260         0.33            2.60      0.053   \n",
+       "4869            6.1             0.590         0.01            2.10      0.056   \n",
+       "4870            8.0             0.220         0.28           14.00      0.053   \n",
+       "4871            7.6             0.200         0.30           14.20      0.056   \n",
        "\n",
        "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
-       "1773                 33.0                 181.0  0.99550  3.04       0.42   \n",
-       "1094                  9.0                  17.0  0.99655  3.35       0.49   \n",
-       "4813                 63.0                 178.0  0.99212  3.10       0.45   \n",
-       "853                  41.0                  55.0  0.99652  3.47       0.73   \n",
-       "2185                 24.0                  94.0  0.99700  3.19       0.44   \n",
+       "0                    33.0                 181.0  0.99550  3.04       0.42   \n",
+       "1                     9.0                  17.0  0.99655  3.35       0.49   \n",
+       "2                    63.0                 178.0  0.99212  3.10       0.45   \n",
+       "3                    41.0                  55.0  0.99652  3.47       0.73   \n",
+       "4                    24.0                  94.0  0.99700  3.19       0.44   \n",
        "...                   ...                   ...      ...   ...        ...   \n",
-       "3619                 27.0                 122.0  1.00295  3.06       0.42   \n",
-       "2461                 11.0                  71.0  0.99402  2.89       0.49   \n",
-       "1346                  5.0                  13.0  0.99472  3.52       0.56   \n",
-       "1855                 83.0                 197.0  0.99810  3.14       0.45   \n",
-       "1983                 53.0                 212.5  0.99900  3.14       0.46   \n",
+       "4867                 27.0                 122.0  1.00295  3.06       0.42   \n",
+       "4868                 11.0                  71.0  0.99402  2.89       0.49   \n",
+       "4869                  5.0                  13.0  0.99472  3.52       0.56   \n",
+       "4870                 83.0                 197.0  0.99810  3.14       0.45   \n",
+       "4871                 53.0                 212.5  0.99900  3.14       0.46   \n",
        "\n",
-       "      alcohol   type  \n",
-       "1773     10.9  white  \n",
-       "1094     10.8    red  \n",
-       "4813      9.7  white  \n",
-       "853      10.9    red  \n",
-       "2185      9.5  white  \n",
-       "...       ...    ...  \n",
-       "3619     10.6  white  \n",
-       "2461      9.5  white  \n",
-       "1346     11.4    red  \n",
-       "1855      9.8  white  \n",
-       "1983      8.9  white  \n",
+       "      alcohol  quality   type  \n",
+       "0        10.9        6  white  \n",
+       "1        10.8        6    red  \n",
+       "2         9.7        5  white  \n",
+       "3        10.9        6    red  \n",
+       "4         9.5        7  white  \n",
+       "...       ...      ...    ...  \n",
+       "4867     10.6        6  white  \n",
+       "4868      9.5        5  white  \n",
+       "4869     11.4        5    red  \n",
+       "4870      9.8        6  white  \n",
+       "4871      8.9        8  white  \n",
        "\n",
-       "[4872 rows x 12 columns]"
+       "[4872 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean fixed acidity</th>\n",
+       "      <th>mean volatile acidity</th>\n",
+       "      <th>mean citric acid</th>\n",
+       "      <th>mean residual sugar</th>\n",
+       "      <th>mean chlorides</th>\n",
+       "      <th>mean free sulfur dioxide</th>\n",
+       "      <th>mean total sulfur dioxide</th>\n",
+       "      <th>mean density</th>\n",
+       "      <th>mean pH</th>\n",
+       "      <th>mean sulphates</th>\n",
+       "      <th>mean alcohol</th>\n",
+       "      <th>mean quality</th>\n",
+       "      <th>red occurances</th>\n",
+       "      <th>white occurances</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.21015</td>\n",
+       "      <td>0.337659</td>\n",
+       "      <td>0.319353</td>\n",
+       "      <td>5.475062</td>\n",
+       "      <td>0.055704</td>\n",
+       "      <td>30.792898</td>\n",
+       "      <td>116.315271</td>\n",
+       "      <td>0.994681</td>\n",
+       "      <td>3.218393</td>\n",
+       "      <td>0.528136</td>\n",
+       "      <td>10.499358</td>\n",
+       "      <td>5.817734</td>\n",
+       "      <td>1178</td>\n",
+       "      <td>3694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mean fixed acidity  mean volatile acidity  mean citric acid  \\\n",
+       "0             7.21015               0.337659          0.319353   \n",
+       "\n",
+       "   mean residual sugar  mean chlorides  mean free sulfur dioxide  \\\n",
+       "0             5.475062        0.055704                 30.792898   \n",
+       "\n",
+       "   mean total sulfur dioxide  mean density   mean pH  mean sulphates  \\\n",
+       "0                 116.315271      0.994681  3.218393        0.528136   \n",
+       "\n",
+       "   mean alcohol  mean quality  red occurances  white occurances  \n",
+       "0     10.499358      5.817734            1178              3694  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# red_train, red_test = train_test_split(data_red, test_size=0.25, random_state=123)\n",
-    "# white_train, white_test = train_test_split(data_white, test_size=0.25, random_state=123)\n",
-    "\n",
-    "# X_red_train = red_train.drop('quality', axis=1)\n",
-    "# y_red_train = red_train['quality']\n",
-    "# X_white_train = white_train.drop('quality', axis=1)\n",
-    "# y_white_train = white_train['quality']\n",
-    "\n",
     "wine_train, wine_test = train_test_split(data_wine, test_size=0.25, random_state=123)\n",
     "\n",
     "X_train = wine_train.drop('quality', axis=1)\n",
     "y_train = wine_train['quality']\n",
-    "X_train"
+    "    \n",
+    "ct = make_column_transformer(\n",
+    "    (OneHotEncoder(), [\"type\"]))\n",
+    "\n",
+    "occurances = pd.DataFrame(ct.fit_transform(wine_train)).astype(\"Int64\").sum()\n",
+    "\n",
+    "stat_table = pd.DataFrame(wine_train.drop(\"type\", axis=1).mean()).swapaxes(\"index\", \"columns\").assign(\n",
+    "    red_occurances = occurances[0],\n",
+    "    white_occurances = occurances[1])\n",
+    "\n",
+    "stat_table.columns = [\"mean fixed acidity\", \"mean volatile acidity\", \"mean citric acid\", \"mean residual sugar\", \"mean chlorides\", \"mean free sulfur dioxide\",\n",
+    "                      \"mean total sulfur dioxide\", \"mean density\", \"mean pH\", \"mean sulphates\", \"mean alcohol\", \"mean quality\", \"red occurances\", \"white occurances\"]\n",
+    "                                                    \n",
+    "                                            \n",
+    "\n",
+    "display(wine_train.reset_index(drop=True))\n",
+    "display(stat_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8d5257a1a46a4ae38a904f6901cba066\"></div>\n",
+       "<div id=\"altair-viz-8454222a457844b9a5f865f225afc1ec\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8d5257a1a46a4ae38a904f6901cba066\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8d5257a1a46a4ae38a904f6901cba066\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8454222a457844b9a5f865f225afc1ec\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8454222a457844b9a5f865f225afc1ec\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -448,7 +546,7 @@
        "alt.VConcatChart(...)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +613,6 @@
     "                             title=alt.TitleParams(\"Plot of All Wine Properties vs Quality\", fontSize=30, \n",
     "                                                   subtitle=\"(sample size \"+str(sample_size)+\": \"+str(red_count)+\" red \"+str(white_count)+\" white)\", anchor=\"middle\", dy=-10))\n",
     "\n",
-    "#wine_plot \n",
     "wine_plot\n",
     "#If you get a schema error at the end its becuase of a bug that's solved in altair 5.0.0rc1. \n",
     "#I install it above, but if it doesn't work clear all your kernal outputs then run all cells"
@@ -547,7 +644,9 @@
    "metadata": {
     "id": "xtakUR5NMScr"
    },
-   "source": []
+   "source": [
+    "start"
+   ]
   },
   {
    "cell_type": "code",
