Typed out Methods

--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -32,11 +32,7 @@
     "Our dataset contains details of red and white *winho verde* wine samples from the north of Portugal. There are 11 quantified physicochemical properties and the quality is classified on an integer scale of 1-10\n",
     "\n",
     "Dataset citation: \\\n",
-    "Cortez, P., Cerdeira, A., Almeida, F., Matos, T., & Reis, J. (2009). Modeling wine preferences by data mining from physicochemical properties. *Decision Support Systems*, 47(4), 547–553. doi:10.1016/j.dss.2009.05.016\n",
-    "\n",
-    ";; just keeping these links here for now \\\n",
-    "sciencedirect.com/science/article/pii/S0167923609001377?via%3Dihub \\\n",
-    "https://archive.ics.uci.edu/ml/datasets/Wine+Quality"
+    "Cortez, P., Cerdeira, A., Almeida, F., Matos, T., & Reis, J. (2009). Modeling wine preferences by data mining from physicochemical properties. *Decision Support Systems*, 47(4), 547–553. doi:10.1016/j.dss.2009.05.016"
    ]
   },
   {
@@ -45,7 +41,7 @@
     "id": "ubGGFBtGLjfu"
    },
    "source": [
-    "# Preliminary exploratory data analysis\n"
+    "# Preliminary Exploratory Data Analysis\n"
    ]
   },
   {
@@ -61,12 +57,12 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: altair==5.0.0rc1 in /opt/conda/lib/python3.10/site-packages (5.0.0rc1)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
       "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
       "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
-      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
-      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
+      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
+      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (22.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2.8.2)\n",
@@ -487,13 +483,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8454222a457844b9a5f865f225afc1ec\"></div>\n",
+       "<div id=\"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8454222a457844b9a5f865f225afc1ec\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8454222a457844b9a5f865f225afc1ec\");\n",
+       "    if (outputDiv.id !== \"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -553,10 +549,11 @@
    ],
    "source": [
     "np.random.seed(1234)\n",
-    "sample_size = 150  #change this to change sample size. It will also change the subtitle\n",
-    "plot_data = wine_train.sample(sample_size) #using a sample for graph readibility and bc altair can't handle over 5000 rows. \n",
-    "red_count = plot_data[plot_data[\"type\"] == \"red\"].shape[0]\n",
-    "white_count = plot_data[plot_data[\"type\"] == \"white\"].shape[0]\n",
+    "sample_size = 150                          #change this to change sample size. It will also change the subtitle\n",
+    "plot_data = wine_train.sample(sample_size) #using a sample for graph readibility and bc altair can't handle over 5000 rows.\n",
+    "\n",
+    "red_count = plot_data[plot_data[\"type\"] == \"red\"].shape[0]     #for subtitle\n",
+    "white_count = plot_data[plot_data[\"type\"] == \"white\"].shape[0] #for subtitle\n",
     "\n",
     "wine_plot1 = (alt.Chart(plot_data)\n",
     "             .mark_circle(opacity=0.65)\n",
@@ -615,7 +612,7 @@
     "\n",
     "wine_plot\n",
     "#If you get a schema error at the end its becuase of a bug that's solved in altair 5.0.0rc1. \n",
-    "#I install it above, but if it doesn't work clear all your kernal outputs then run all cells"
+    "#I install it above, but if it doesn't work then clear all your kernal outputs then run all cells"
    ]
   },
   {
@@ -623,12 +620,7 @@
    "metadata": {
     "id": "iluggkwaFiwJ"
    },
-   "source": [
-    "- loaded data into notebook and read\n",
-    "- tidy data: each variable forms a volumn & each observation forms a row & each cell is a single measurement\n",
-    "- separate data into X_training, y\n",
-    "- create a plot using the training data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -645,17 +637,12 @@
     "id": "xtakUR5NMScr"
    },
    "source": [
-    "start"
+    "We will be performing a classification using n nearest neighbours to predict the quality of observed *winho verde* wines. We will conduct our data analysis using all properties provided by the data frame. We will do this because by looking at the graphs made during our Preliminary Exploratory Data Analysis, we found that there weren't many strong relationships between wine properties and quality--or at least these relationships haven't made themselves immediately apparent. This is only to the human eye, however, so we hope that once all properties are analyzed together (something which can't be represented by a 2-D graph) that patterns will make themselves more apparent to our classification model. We also wish to include the wine type in the properties we use in our model. How we go about this though is something to be seen during the creation of our project, since there are two ways we can think of doing this: \n",
+    "\n",
+    "1) We turn the categorical data of wine type into numerical data using OneHotEncoder() and incorporate that into our n_nearest_neighbors model. We aren't sure if this will work or if it will confuse our model since both wine types can have very different physiochemical makeups. This is best demonstrated by our residual sugar graph. If this does seem to confuse our model and our model's accuracy is low, then we may test our second method.\n",
+    "\n",
+    "2) We keep our data separated into two datasets, one for red and one for white, then train both separately and create a classification model for each type. This might help our model avoid any confusion between the differing physiochemical makeups of the two wine types."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tZxT8JkyHCyJ"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -663,7 +650,7 @@
     "id": "Ly5xxBotLx5y"
    },
    "source": [
-    "# Expected outcomes and significance\n"
+    "# Expected Outcomes and Significance\n"
    ]
   },
   {
