--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Our dataset contains details of red and white *winho verde* wine samples from the north of Portugal. There are 11 quantified physicochemical properties and the quality is classified on an integer scale of 1-10\n",
     "\n",
-    "Dataset citation: \\\n",
+    "<u> Dataset citation: </u> \\\n",
     "Cortez, P., Cerdeira, A., Almeida, F., Matos, T., & Reis, J. (2009). Modeling wine preferences by data mining from physicochemical properties. *Decision Support Systems*, 47(4), 547–553. doi:10.1016/j.dss.2009.05.016"
    ]
   },
@@ -57,14 +57,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: altair==5.0.0rc1 in /opt/conda/lib/python3.10/site-packages (5.0.0rc1)\n",
+      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
+      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
       "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
       "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
       "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
-      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
-      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (22.2.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2022.7)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.10/site-packages (from jinja2->altair==5.0.0rc1) (2.1.1)\n",
@@ -483,13 +483,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\"></div>\n",
+       "<div id=\"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-57fe5ccd980a43c3801f60dd54319ac1\");\n",
+       "    if (outputDiv.id !== \"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -618,13 +618,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "iluggkwaFiwJ"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "LSH1jmxyLj3C"
    },
    "source": [
@@ -641,7 +634,9 @@
     "\n",
     "1) We turn the categorical data of wine type into numerical data using OneHotEncoder() and incorporate that into our n_nearest_neighbors model. We aren't sure if this will work or if it will confuse our model since both wine types can have very different physiochemical makeups. This is best demonstrated by our residual sugar graph. If this does seem to confuse our model and our model's accuracy is low, then we may test our second method.\n",
     "\n",
-    "2) We keep our data separated into two datasets, one for red and one for white, then train both separately and create a classification model for each type. This might help our model avoid any confusion between the differing physiochemical makeups of the two wine types."
+    "2) We keep our data separated into two datasets, one for red and one for white, then train both separately and create a classification model for each type. This might help our model avoid any confusion between the differing physiochemical makeups of the two wine types.\n",
+    "\n",
+    "We will visualize our result by creating a scatterplot of {property} vs quality for each property using our testing data (or a sample of our testing data) and then overlaying a line plot of our predicted quality. It will look similar to the graph layout in our Preliminary Exploratory Data Analysis, just including the overlay. We would also like to include a visualization involving our prediction accuracy, but we are unsure how to go about it."
    ]
   },
   {
@@ -658,7 +653,13 @@
    "metadata": {
     "id": "CgcnMMLmMSBz"
    },
-   "source": []
+   "source": [
+    "We expect that our model(s) will accurately predict qualities between 4 and 7 since that's where most of the training data falls. It may have trouble predicting wines with quality far outside that range. \n",
+    "\n",
+    "The accurate predictions of wine quality based on physicochemical properties could have large implications for how the wine industry conducts its quality certifications. It is doubtful that our model will have a high enough accuracy to instantly revolutionize the wine certification process, but a small success with our method could encourage further research with more complicated methods. If those more complicated methods can prove themselves trustworthy in predicting wine quality, then that could change the industry standard for how wines are certified in the future (assuming people allow this change).\n",
+    "\n",
+    "The success of this scenario could lead to future questions about the relationship between the physicochemical properties of various foods and what people think tastes \"good\"."
+   ]
   }
  ],
  "metadata": {
