Final edits to intro

--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -24,7 +24,7 @@
     "id": "zH6MHKGUMTaq"
    },
    "source": [
-    "Of the 5 senses we have available to us, taste is often thought of as the least understood sense because of how difficult it is to quantify. This can pose problems for industries where business is influenced by the taste of a product, which is especially true for the wine industry. Expert wine testers are often needed to determine and certify the quality of different wines through sensory tests. (Cortez, 2009) While this is the current industry standard, are there any other ways to certify the quality of a wine without depending on certifed experts? This leads to our question:\n",
+    "Of the 5 senses we have available to us, taste is often thought of as the least understood sense because of how difficult it is to quantify. This can pose problems for industries where business is influenced by the taste of a product, which is especially true for the wine industry. Expert wine testers are often needed to determine and certify the quality of different wines through sensory tests. (Cortez, 2009) While this is the current industry standard, are there any other ways to certify the quality of a wine without depending on certified experts? This leads to our question:\n",
     "\n",
     "**Is it possible to predict the quality classification of a wine based on quantifiable physicochemical properties using data analysis?**\n",
     "\n",
@@ -57,12 +57,12 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: altair==5.0.0rc1 in /opt/conda/lib/python3.10/site-packages (5.0.0rc1)\n",
-      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
-      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
       "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
-      "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
+      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
+      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
+      "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (22.2.0)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2.8.2)\n",
@@ -483,13 +483,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\"></div>\n",
+       "<div id=\"altair-viz-6be3806ca1364b38a1e5f5c79d60c1f2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-97d8e78cf68b4306b2cf46db56b768c4\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6be3806ca1364b38a1e5f5c79d60c1f2\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6be3806ca1364b38a1e5f5c79d60c1f2\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
